componente de ionic datepick cambiado por input date por problemas con la validacion

--- a/src/app/private/pages/vacunas-crear/vacunas-crear.page.html
+++ b/src/app/private/pages/vacunas-crear/vacunas-crear.page.html
@@ -24,7 +24,8 @@
         <!-- Input de fecha -->
   
         <ion-item>
-          <ion-datetime class="fecha-input" formControlName="fecha" presentation="date" [preferWheel]="true"></ion-datetime>
+          <ion-icon name="calendar"></ion-icon>
+          <ion-input class="inputs"  displayFormat="DD/MM/YYYY" type="date" formControlName="fecha" class="inputs" label="Fecha" labelPlacement="floating"></ion-input>
         </ion-item>
   
     
