--- a/src/app/private/pages/citas-medicas-crear/citas-medicas-crear.page.html
+++ b/src/app/private/pages/citas-medicas-crear/citas-medicas-crear.page.html
@@ -1,13 +1,63 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>citasMedicasCrear</ion-title>
+    <ion-title>Reservar Cita</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">citasMedicasCrear</ion-title>
-    </ion-toolbar>
-  </ion-header>
+      <!-- Animación -->
+      <div class="anim">
+        <ng-lottie [options]="options"></ng-lottie>
+    </div>
+
+    <ion-list>
+
+        <form [formGroup]="FormularioCitasMedicas" (ngSubmit)="CreateCitaMedica(FormularioCitasMedicas.value)">
+
+          <!-- Input de titulo -->
+            <ion-item>
+                <ion-icon name="leaf"></ion-icon>
+                <ion-input formControlName="titulo" class="inputs" label="Titulo de la Cita" labelPlacement="floating" placeholder="Problemas Respiratorio"></ion-input>
+            </ion-item>
+
+            <!-- Input de hora de inicio -->
+
+            <ion-item>
+                <ion-icon name="time"></ion-icon>
+                <ion-input formControlName="hora_inicio" class="inputs" label="Hora Llegada" labelPlacement="floating" placeholder="2:30 PM"></ion-input>
+            </ion-item>
+
+
+            <!-- Input de hora de fin -->
+
+            <ion-item>
+                <ion-icon name="alarm-outline"></ion-icon>
+                <ion-input formControlName="hora_fin" class="inputs" label="Hora Salida" labelPlacement="floating" placeholder="17:00 PM"></ion-input>
+            </ion-item>
+
+
+            <!-- Input de Medico -->
+
+            <ion-item>
+              <ion-select formControlName="medico_id" label="Medico" label-placement="floating" fill="solid">
+                <ion-select-option value="1">Dr. Jandry Kun</ion-select-option>
+                <ion-select-option value="2">Dr. Juan Jesús</ion-select-option>
+                <ion-select-option value="3">Dr. Jean Pierre Zambrano</ion-select-option>
+              </ion-select>
+            </ion-item>
+
+            <ion-button color="medium" type="submit">
+              Registrar
+            <ion-icon class="ion-icon-create" slot="end" name="create"></ion-icon>
+            </ion-button>
+        </form>
+
+    </ion-list>
+
+    <!-- Para regresar atrás -->
+    <ion-fab [routerLink]="['/citas-medicas']" slot="fixed" horizontal="end" vertical="bottom">
+        <ion-fab-button color="dark">
+            <ion-icon name="chevron-back"></ion-icon>
+        </ion-fab-button>
+    </ion-fab>
 </ion-content>
