--- a/src/app/private/pages/cita-medicas-detalle/cita-medicas-detalle.page.html
+++ b/src/app/private/pages/cita-medicas-detalle/cita-medicas-detalle.page.html
@@ -36,22 +36,29 @@
         <!-- Inputs de titulo -->
         <ion-input formControlName="titulo" class="inputs" label="Titulo de la Cita" labelPlacement="floating" placeholder="Problemas Cárdiacos"></ion-input>
     </ion-item>
+    <div class="mt-1" *ngIf="FormCitasMedicasEditar.get('titulo')?.invalid && FormCitasMedicasEditar.get('titulo')?.touched">
+      <ion-badge *ngIf="FormCitasMedicasEditar.get('titulo')?.hasError('required')" color="warning">Campo Requerido</ion-badge>
+  </div>
 
     <!-- Input de Hora Inicio -->
     <ion-item>
         <ion-icon name="time"></ion-icon>
-        <ion-input formControlName="hora_inicio" class="inputs" label="Hora de Entrada" labelPlacement="floating" placeholder="2:00 pm"></ion-input>
+        <ion-input formControlName="hora_inicio" class="inputs" label="Hora de Entrada" labelPlacement="floating" placeholder="2:00 pm" type="time"></ion-input>
     </ion-item>
-
+    <div class="mt-1" *ngIf="FormCitasMedicasEditar.get('hora_inicio')?.invalid && FormCitasMedicasEditar.get('hora_inicio')?.touched">
+      <ion-badge *ngIf="FormCitasMedicasEditar.get('hora_inicio')?.hasError('required')" color="warning">Campo Requerido</ion-badge>
+  </div>
 
 
     <!-- Input de hora_fin -->
 
     <ion-item>
         <ion-icon name="alarm-outline"></ion-icon>
-        <ion-input formControlName="hora_fin" class="inputs" label="Hora de Salida" labelPlacement="floating" placeholder="17:00 pm"></ion-input>
+        <ion-input formControlName="hora_fin" class="inputs" label="Hora de Salida" labelPlacement="floating" placeholder="17:00 pm" type="time"></ion-input>
     </ion-item>
-
+    <div class="mt-1" *ngIf="FormCitasMedicasEditar.get('hora_fin')?.invalid && FormCitasMedicasEditar.get('hora_fin')?.touched">
+      <ion-badge *ngIf="FormCitasMedicasEditar.get('hora_fin')?.hasError('required')" color="warning">Campo Requerido</ion-badge>
+  </div>
 
     <!-- Input medico_id -->
 
@@ -62,9 +69,11 @@
         <ion-select-option value="3">Dr. Jean Pierre Zambrano</ion-select-option>
       </ion-select>
     </ion-item>
+    <div class="mt-1" *ngIf="FormCitasMedicasEditar.get('medico_id')?.invalid && FormCitasMedicasEditar.get('medico_id')?.touched">
+      <ion-badge *ngIf="FormCitasMedicasEditar.get('medico_id')?.hasError('required')" color="warning">Campo Requerido</ion-badge>
+  </div>
 
-
-    <ion-button  color="medium" type="submit">
+    <ion-button  color="medium" type="submit" [disabled]="FormCitasMedicasEditar.invalid">
         Actualizar
         <ion-icon class="ion-icon-create" slot="end" name="create"></ion-icon>
     </ion-button>
