Fab button añadido en la page de medicamentos detalle

--- a/src/app/private/pages/medicamentos-detalle/medicamentos-detalle.page.html
+++ b/src/app/private/pages/medicamentos-detalle/medicamentos-detalle.page.html
@@ -144,4 +144,11 @@
         </ion-button>
 
     </form>
+
+    <!-- Para regresar atrás -->
+    <ion-fab [routerLink]="['/medicamentos']" slot="fixed" horizontal="end" vertical="bottom">
+        <ion-fab-button color="dark">
+            <ion-icon name="chevron-back"></ion-icon>
+        </ion-fab-button>
+    </ion-fab>
 </ion-content>
