--- a/src/app/private/pages/profile-paciente/profile-paciente.page.html
+++ b/src/app/private/pages/profile-paciente/profile-paciente.page.html
@@ -5,9 +5,108 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">profilePaciente</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-card>
+    <ion-card-header>
+       <div class="flex-warp">
+        <p class="title">Perfil paciente</p>
+        <img class="img-profile" alt="user" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+        <h3>Jose Cralos <span>Ramierz Briones</span></h3>
+        <p>jorge@gmail.com</p>
+       </div>
+
+       <div class="flex-warp-content">
+        <div class="data-content">
+          <ion-icon name="sparkles-outline"></ion-icon>
+          <div class="subtitle">Miembro desde <span>Agosto 10, 2023</span></div>
+        </div>
+
+        <div class="data-content">
+          <ion-icon name="location-outline"></ion-icon>
+          <div class="subtitle">Manabi, <span>Bolívar</span></div>
+        </div>
+
+        <div class="data-content">
+          <ion-icon name="calendar-number-outline"></ion-icon>
+          <div class="subtitle">Agosto 16, 2000</div>
+        </div>
+
+        <div class="data-content">
+          <ion-icon name="call-outline"></ion-icon>
+          <div class="subtitle">096 880 8810</div>
+        </div>
+
+       </div>
+    </ion-card-header>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-accordion-group>
+        <ion-accordion value="second" toggleIcon="caret-down-circle" toggleIconSlot="start">
+          <ion-item slot="header" color="light">
+            <div class="subtitle">Antedentes médicos</div>
+          </ion-item>
+          <div slot="content">
+            <h5>Condicion medica</h5>
+            <h5>Alergias</h5>
+            <h5>Tipo sangre</h5>
+            <h5>Otros datos</h5>
+         </div>
+        </ion-accordion>
+      </ion-accordion-group>
+    </ion-card-header>
+
+    <ion-card-header>
+      <ion-accordion-group>
+        <ion-accordion value="second" toggleIcon="caret-down-circle" toggleIconSlot="start">
+          <ion-item slot="header" color="light">
+            <div class="subtitle">Medicamentos</div>
+          </ion-item>
+          <div slot="content">
+            <h5>Tienes <span>20</span> <span> medicamentos</span></h5>
+            <h5>Desde <span>20/08/2022</span></h5>
+            <h5>Hasta <span>20/08/2023</span></h5>
+         </div>
+        </ion-accordion> 
+      </ion-accordion-group>
+    </ion-card-header>
+
+    <ion-card-header>
+      <ion-accordion-group>
+        <ion-accordion value="second" toggleIcon="caret-down-circle" toggleIconSlot="start">
+          <ion-item slot="header" color="light">
+            <div class="subtitle">Vacunas</div>
+          </ion-item>
+          <div slot="content">
+            <h5>Tienes <span>10</span> <span> vacunas</span></h5>
+            <h5>Desde <span>20/08/2022</span></h5>
+            <h5>Hasta <span>20/08/2023</span></h5>
+         </div>
+        </ion-accordion>
+      </ion-accordion-group>
+    </ion-card-header>
+
+    <ion-card-header>
+      <ion-accordion-group>
+        <ion-accordion value="second" toggleIcon="caret-down-circle" toggleIconSlot="start">
+          <ion-item slot="header" color="light">
+            <div class="subtitle">Examenes</div>
+          </ion-item>
+          <div slot="content">
+            <h5>Tienes <span>50</span> <span> examnes</span></h5>
+            <h5>Desde <span>20/08/2022</span></h5>
+            <h5>Hasta <span>20/08/2023</span></h5>
+         </div>
+        </ion-accordion>
+      </ion-accordion-group>
+    </ion-card-header>
+
+    <div class="ion-text-center ion-margin-vertical">
+      <ion-button>
+        Ver historial
+      </ion-button>
+    </div>
+
+  </ion-card>
 </ion-content>
+
